path: temporarily fixes stuck covering buttons

--- a/components/path/stylesheets/path.styl
+++ b/components/path/stylesheets/path.styl
@@ -28,9 +28,9 @@
     top 1px
     left 0px
     height 38px
-    margin 0
     text-align center
-    width 100%
+    width 50%
+    margin 0 25% 0 25%
 
     .path__headline
       display inline-block
